# eml-lab

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: hosted-demo.md  phase-2-plan.md  phase-2.md
examples/: recover_ln.py
src/eml_lab/: __init__.py  __main__.py  agentic.py  app.py  artifacts.py  benchmarks.py  campaigns.py  cli.py  comparison.py  experiments.py  mutations.py  operator_zoo.py  operators.py  pruning.py  pysr_worker.py  research_reports.py  scoring.py  soft_tree.py  targets.py  training.py  trees.py  verify.py  visualize.py
tests/: test_agentic.py  test_artifacts.py  test_benchmarks.py  test_campaigns.py  test_cli_app.py  test_comparison.py  test_eml_operator.py  test_hosting_packaging.py  test_operator_zoo.py  test_pysr_worker.py  test_research_reports.py  test_targets.py  test_training.py  test_trees.py  test_verify.py  test_visualize.py
